# libis

./: CMakeLists.txt  README.md  meson.build
include/: CMakeLists.txt  libis.h
src/: CMakeLists.txt  libis.c  libis_buffer_source.c  libis_file_descriptor_source.c  libis_file_source.c  libis_internal.h  libis_source.h
test-unit/: CMakeLists.txt  main.c
